<resources>

    <string name="menu_settings">Settings</string>
    <string name="app_name">Zen Instants</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tabs">Zen Instants</string>
    <string name="title_tab_settings">Settings</string>
    <string name="title_tab_planning">Planning</string>
    <string name="title_activity_historial">Zen Instants</string>
    <string name="historialmayus">HISTORIAL</string>
    <string name="text">Text</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="photos">Photos</string>
    <string name="music">Music</string>
    <string name="videos">Videos</string>
    <string name="set">"          "</string>
    <string name="daymessages">Daily messages: </string>
    <string name="diary_messages">Diary messages:</string>
    <string name="save">Save</string>
    
    <!-- Messages string -->
    <string name="msg_title">ZEN INSTANTS</string>
    <string name="msg_more_info_btn">More info</string>
    <string name="msg_like_btn">Like</string>
    <string name="msg_dislike_btn">Dislike</string>
    <string name="msg_cancel_btn">Cancel</string>
    <string name="msg_image_content_description">Image</string>
    <string name="separator">separator</string>
    
    <!--  Setting  -->
    <string name="stress">Stress</string>
    <string name="enablenotifications">Enable Notifications</string>
	<string name="yes">YES</string>
	<string name="no">NO</string>
	<string name="textmessages">Text messages</string>
	<string name="imagemessages">Image messages</string>
	<string name="photomessages">Photo messages</string>
	<string name="musicmessages">Music messages</string>
	<string name="videomessages">Video messages</string>
    
    
    <!-- Debug string -->
	<string name="bla">e
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	    fozef zefl zj zej ziefjizojz     zefzef        zefzefze zefzef        zef        zefzef ze zef zef        zefzefzf z fez fzef f zf ez        erg erer ger        erg erg er ge er er        erg erg erg  er        e rg ergerg         erg          er          er g          er ger e e rge          gr erger erg erg erg eg          er gerg erge          e rgerg er          e gerg e           eg           erg erg er eer                      er g           er eg           er g           e g           eg 
	</string>
</resources>