<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_main_layout"
    style="@style/ZenInstant.Message.WindowPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/message_layout"
        style="@style/ZenInstant.Message.Container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/message_title"
                style="@style/ZenInstant.Message.Title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/msg_title" />

	       	<ImageButton 
		        android:src="@drawable/navigation_cancel"
		        android:id="@+id/message_cancel"
		        android:contentDescription="@string/msg_cancel_btn"
		        android:layout_alignParentRight="true"
		        android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@null"
	             />
		</RelativeLayout>

        <ScrollView
            android:id="@+id/message_scroll"
            android:layout_height="0dp"
			android:layout_weight="1"
            android:layout_width="wrap_content"
            style="@style/ZenInstant.Message.ScrollView" >

            <LinearLayout
		        android:id="@+id/message_scroll_content_layout"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:orientation="vertical" >
		        <!-- Sound here -->

				<RelativeLayout 
				    android:layout_height="match_parent"
				    android:paddingBottom="20dp"
				    android:layout_width="match_parent">
	                <ImageButton
	                    android:id="@+id/message_sound"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_centerInParent="true"
	                    style="?attr/actionButtonStyle"
	                    android:src="@drawable/av_play" >
	                </ImageButton>
	           </RelativeLayout>

	            <TextView
	                android:id="@+id/message_text"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                style="@style/ZenInstant.Message.Text"
	                android:text="@string/bla" />
			</LinearLayout>
        </ScrollView>
        <include
			android:id="@+id/message_buttons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="fill_horizontal"
			layout="@layout/element_message_buttons_bar" />
	</LinearLayout>
</RelativeLayout>